--- a/css/style.css
+++ b/css/style.css
@@ -3,32 +3,33 @@ html{
 }
 
 .header-container{
-    box-sizing: border-box;
-    background: linear-gradient(70deg, black, white);
+    
+    background: linear-gradient(110deg,#000814, #d9d9d9);
     width: 100vw;
     height: 20vh;
     margin: 0;
     padding: 0;
     border: 0;
-    color: #fca311;
+    color: #d9d9d9;
     text-align: center;
     font-size: 2rem;
+    
 }
 
 .main-container{
-    box-sizing: border-box;
-    background-color:#eff6e0;
+    
     width: 100vw;
     height: 60vh;
     margin: 0;
     padding: 0;
     border: 0;
+    
 }
 
 
 .footer-container{
-    box-sizing: border-box;
-    background:linear-gradient(110deg,#000814, #ffc300);
+    
+    background:linear-gradient(0deg,#000814, #d9d9d9);
     width: 100vw;
     height: 20vh;
     margin-top: 0.5rem;
@@ -44,6 +45,8 @@ html{
     border-radius: 2rem;
     width: fit-content;
     padding-inline-start: 1rem;
+    margin-top: 1rem;
+    
 }
 
 .nav-list__item{
@@ -55,18 +58,21 @@ html{
     border-top-right-radius: 5rem;
     border-bottom-left-radius: 5rem;
     text-align: center;
-    background:linear-gradient(70deg, black, white);
+    background:linear-gradient(180deg, #000814,  #d9d9d9);
     padding:1rem;
     display: block;
-    
-    
+}
+
+.nav-list__item:hover {
+    background:darkcyan;
+    color: black;
 }
 
 .nav-list__link{
     text-decoration: none;
     font-size:2rem;
     margin: 0 2rem 0 0;
-    color:#ffb703;
+    color:#d9d9d9;
     text-align: center;
-    
 }
+
