--- a/css/style.css
+++ b/css/style.css
@@ -1,104 +1,113 @@
 html{
     font-size: 62.5%;
+    box-sizing: border-box;
+    font-family: 'Press Start 2P', cursive;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Slab', serif
 }
 
 .header-container{
-    
-    background: linear-gradient(360deg,#000814, #d9d9d9);
-    width: 100vw;
-    height: 20vh;
-    margin: 0;
-    padding: 2rem 0;
-    border: 0;
-    color: #d9d9d9;
-    text-align: center;
-    font-size: 2rem; 
+    background:url(../img/fondo.webp) no-repeat center center fixed;
+	background-size:cover;
+	height:10vh;
+	width: 100%;
+	position: absolute;
+	left:0;
+	top:0;
+    display: flex;
+    justify-content: end;
+    align-items: center;
 }
 
 .header-container__title{
+    color:#58a4b0;
     letter-spacing: 2rem;
+    font-size: 3rem;
+    margin: 0;
+    padding: 0;
 }
 
 .main-container{
-    
-    width: 100vw;
-    height: 60vh;
-    padding: 0;
-    border: 0;
-    display: flex;
-    box-sizing: border-box;
-    margin-bottom: 10rem;
-    height: fit-content;
-}
-   
-
-.menu-section{
-    padding: 1rem;
-    margin: 1rem;
-    border: 1px solid black;
-    height: fit-content;
-
+    height:90vh;
+	width: 100%;
 }
 
-.content-section{
+.side-panel{
+    height: 100%;
+    width: 25%;
     box-sizing: border-box;
+    background:url(../img/fondo.webp) no-repeat center center fixed;
+	background-size:cover;
+	position: absolute;
+	left:0;
+	top:0;
+    box-sizing: border-box;    
+}
+
+.card{
+    width: 30rem;
     font-size: 1.6rem;
-    border: 1px solid black;
-    padding: 1rem;
-    margin: 1rem 2rem 2rem 2rem;
-    height: fit-content;
+    border-radius: 20px;
+    padding: 20px;
+    background-color: white;
+    background:url(../img/fondo.webp) no-repeat center center fixed;
+	background-size:cover;
+    margin-top: 40px;
 }
 
 
-.content-section__article{
+.card__cabecera{
+    background-color: #d8dbe2;
+    color: #1b1b1e;
+    width: 25rem;
+    height: 3rem;
+    padding: 10px;
     border: 1px solid black;
-    margin: 1rem;
+    border-radius: 40px;
+    text-align: center;
+    margin: 10px auto;
+    position: relative;
+    top:30px;
+    box-shadow: 0 10px 10px 0 black;
+    opacity: 0.7;
+    /* font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
+
+}
+
+.card__content{
+    background-color: #1b1b1e;
+    /* border-radius: 20px; */
+    border-top-right-radius: 70px;
+    border-bottom-left-radius: 70px;
+    border: 1px solid azure;
+    padding: 30px;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 10px 10px 0 black;
     box-sizing: border-box;
+}
+
+.card__img{
+    border-radius: 200px;
+    margin: 10px 20px;
+    width: 200px;
+    height: 200px;
+
+}
+
+.card__paragraph{
+    color: #58a4b0;
     text-align: justify;
-    padding: 1rem;
 }
 
-.menu-section__nav-menu{
-    border: 1px solid black;
-    padding: 2rem;
-}
 
-.nav-list__item{
-    list-style: none;
-    margin:1rem 0;
-    width: 20rem;
-    height: 4rem;
-    border-top-right-radius: 5rem;
-    border-bottom-left-radius: 5rem;
-    text-align: center;
-    background:linear-gradient(180deg, #000814,  #d9d9d9);
-    padding:1rem;
-    display: block;
-}
+/* .main-container{
 
-.nav-list__item:hover {
-    background:darkcyan;
-    color: black;
-}
 
-.nav-list__link{
-    text-decoration: none;
-    font-size:2rem;
-    margin: 0 2rem 0 0;
-    color:#d9d9d9;
-    text-align: center;
 }
 
 
 .footer-container{
-    
-    background:linear-gradient(0deg,#000814, #d9d9d9);
-    width: 100vw;
-    height: 20vh;
-    margin-top: 0.5rem;
-    padding: 0;
-    border: 0;
-    color: #d9d9d9;
-    text-align: center;
-    font-size: 5rem; 
-}
+
+
+} */
