--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,9 @@ html{
 	background-size:cover;
 	height:10vh;
 	width: 100%;
-	position: absolute;
-	left:0;
-	top:0;
+	/* position: absolute; */
+	/* left:0;
+	top:0; */
     display: flex;
     justify-content: end;
     align-items: center;
@@ -28,31 +28,36 @@ html{
 }
 
 .main-container{
-    height:90vh;
 	width: 100%;
+    box-sizing: border-box;
+    min-height: 80vh;
+    display: flex;
+    justify-content: space-between;
 }
 
 .side-panel{
     height: 100%;
-    width: 25%;
+    width: fit-content;
     box-sizing: border-box;
     background:url(../img/fondo.webp) no-repeat center center fixed;
 	background-size:cover;
-	position: absolute;
-	left:0;
-	top:0;
-    box-sizing: border-box;    
+	/* position: absolute; */
+	/* left:0;
+	top:0; */
+    
+       
 }
 
 .card{
     width: 30rem;
-    font-size: 1.6rem;
+    font-size: 1.2rem;
     border-radius: 20px;
     padding: 20px;
-    background-color: white;
+    /* background-color: white; */
     background:url(../img/fondo.webp) no-repeat center center fixed;
 	background-size:cover;
     margin-top: 40px;
+    
 }
 
 
@@ -75,39 +80,101 @@ html{
 }
 
 .card__content{
-    background-color: #1b1b1e;
+    /* background-color: #1b1b1e; */
+    background: linear-gradient(90deg, #1b1b1e, #58a4b0);
     /* border-radius: 20px; */
     border-top-right-radius: 70px;
     border-bottom-left-radius: 70px;
-    border: 1px solid azure;
+    border: 1px solid #a9bcd0;
     padding: 30px;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 10px 10px 0 black;
+    box-shadow: 0 2px 2px 2px #a9bcd0;
     box-sizing: border-box;
 }
 
 .card__img{
     border-radius: 200px;
-    margin: 10px 20px;
-    width: 200px;
-    height: 200px;
+    margin: 10px 30px;
+    width: 180px;
+    height: 180px;
+    box-shadow: 2px 2px 2px 2px #a9bcd0;
 
 }
 
 .card__paragraph{
-    color: #58a4b0;
+    color: #d8dbe2;
     text-align: justify;
 }
 
 
-/* .main-container{
+.content-panel{
+    width: 100%;
+}
 
+.navBar{
+    
+    box-sizing: border-box;
+    width: 100%;
+}
+
+.navBar-list {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+.navBar-list__item{
+    list-style: none;
+}
+
+.boton{
+
+    /* border-radius: 30px; */
+    /* border-bottom-left-radius: 50px;
+    border-top-right-radius: 50px; */
+    background-color:#373f51;
+    text-align: center;
+    /* font-family: helvetica, arial; */
+    box-shadow: 0px 10px 10px 0px rgb(0, 0, 0);
+    font-size: 1.2rem;
+    
+}
+
+.boton:hover {
+    background-color: #d8dbe2;
+}
+
+.boton:active {
+    background-color:greenyellow;
+}
+
+.navBar__boton {
+    min-width: 25rem;
+    height: 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
 
 }
+
+.navBar__link{
+    text-decoration: none;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    color:#58a4b0;
+}
+
 
 
 .footer-container{
 
+    text-align: center;
+    border: 1px black solid;
 
-} */
+}
