--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>jlruedam_dev</title>
-    <link rel="stylesheet" href="css/normalize.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/normalize.css" type="text/css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto+Slab:wght@100;300&family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
                     </strong> 
                 </div>
                 <div class="card__content"> 
-                    <img class="card__img" src="img/yo2.jpg" alt="Aquí va la foto">  
+                    <img class="card__img" src="../img/yo2.jpg" alt="Aquí va la foto">  
                     <div class="card__paragraph">
                         Hola!, soy Jorge. <br>
                         Soy Ingeniero Electrónico, Especialista en Telecomunicaciones y desarrollador software autodidacta.
@@ -48,25 +48,21 @@
         <section class="content-panel">
             <nav class="navBar">
                 <ul class="navBar-list">
-                    <li class="navBar-list__item"><button class="boton navBar__boton"><a class="navBar__link" href="#">Telecomunicaciones</a></button></li>
-                    <li class="navBar-list__item"><button class="boton navBar__boton"><a class="navBar__link" href="#">Desarrollo de software</a></button></li>
-                    <li class="navBar-list__item"><button class="boton navBar__boton"><a class="navBar__link" href="#">Habilidades blandas</a></button></li>
-                    <li class="navBar-list__item"><button class="boton navBar__boton"><a class="navBar__link" href="#">Persona</a></button></li>
+                    <li class="navBar-list__item"><button class="boton navBar__boton"><a class="navBar__link" href="academy.html" target="subcontent">Academy</a></button></li>
+                    <li class="navBar-list__item"><button class="boton navBar__boton"><a class="navBar__link" href="#">Jobs</a></button></li>
+                    <li class="navBar-list__item"><button class="boton navBar__boton"><a class="navBar__link" href="#">Soft skills</a></button></li>
+                    <li class="navBar-list__item"><button class="boton navBar__boton"><a class="navBar__link" href="#">Contact</a></button></li>
                 </ul>
             </nav>
+            <iframe src="perfil.html" frameborder="0" name="subcontent" width="100%" height="100%" >
+                
+            </iframe>
         </section>
-        </section>
-        </section>
-        </section>
-       
-       
-       
-       
 
     </main>
 
     <footer class="footer-container">
-        <h1>
+        <h1 class="header-container__title">
             on my way...
         </h1>
     </footer>
