--- a/templates/index.html
+++ b/templates/index.html
@@ -13,16 +13,20 @@
 </head>
 <body>
     <header class="header-container">
-        <h1 class=header-container__title>jlruedam_dev</h1>
+        <h1 class=header-container__title><a href="index.html">jlruedam_dev</a></h1>
        
     </header>
 
     <main class="main-container">
         <section class="side-panel">
+            <figure>
+                <img src="../img/Logo.ico" alt="Logo">
+                <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
+              </figure>
             <div class="card"> 
                 <div class="card__cabecera">
                     <strong>
-                        Jorge Luis Rueda Marín
+                        Python Developer
                     </strong> 
                 </div>
                 <div class="card__content"> 
@@ -54,7 +58,7 @@
                     <li class="navBar-list__item"><button class="boton navBar__boton"><a class="navBar__link" href="#">Contact</a></button></li>
                 </ul>
             </nav>
-            <iframe src="perfil.html" frameborder="0" name="subcontent" width="100%" height="100%" >
+            <iframe src="perfil.html" frameborder="0" name="subcontent" width="100%" height="100%">
                 
             </iframe>
         </section>
