--- a/css/style.css
+++ b/css/style.css
@@ -57,28 +57,31 @@ html{
 .side-panel{
 
     height: 100%;
-    width: fit-content;
     box-sizing: border-box;
     background:url(../img/fondo.webp) no-repeat center center fixed;
 	background-size:cover;
-	/* position: absolute; */
-	/* left:0;
-	top:0; */
-    
-       
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#figure_side-panel img{
+    width:200px;
+    height: 200px;
+    margin: 0;
+    padding: 0;
+    box-shadow: 0 10px 10px 0 var(--blue_gray);
+    border-radius: 20px;
 }
 
 .card{
-
     width: 30rem;
     font-size: 1.2rem;
     border-radius: 20px;
     padding: 20px;
-    /* background-color: white; */
     background:url(../img/fondo.webp) no-repeat center center fixed;
 	background-size:cover;
-    /* margin-top: 10px; */
-    
 }
 
 
@@ -95,7 +98,7 @@ html{
     margin: 10px auto;
     position: relative;
     top:30px;
-    box-shadow: 0 10px 10px 0 --shadow_dark;
+    box-shadow: 0 10px 10px 0 var(--shadow_dark);
     opacity: 0.8;
     font-size: 2rem;
     /* font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
